src/test/resources/wacc_examples/invalid/semanticErr/imports/importFiles/fileWithInvalidImport.wacc
begin
    include "filenothere.wacc"
    skip
end